<resources>
    <string name="app_name">WorldTour</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="Desc">Melat Tekie, Computer Science Major and Psychology Minor. I am a senior in MSUM graduating on may 2018. My Hobies include reading Poetry and drawing </string>
    <string name="TMO">Take me on a Tour</string>
    <string name="WT">WorldTour</string>
    <string name="FOLLOWING">Please enter your the following</string>
    <string name="SEARCHER">Search our database</string>
    <string name="RU">Registered Users</string>
    <string name="CtT">Sites in China</string>
    <string name="CC">Forbidden City</string>
    <string name="DESC1">The Forbidden City is a palace complex in central Beijing, China. The former seat of Imperial Chinese Dragon Throne from the Ming dynasty to the end of the Qing dynasty—the years 1420 to 1912, it now houses the Palace Museum</string>
    <string name="CD">Great Wall of China</string>
    <string name="DESC2">The Great Wall of China is a series of fortifications made of stone, brick, tamped earth, wood, and other materials, generally built along an east-to-west line across the historical northern borders of China to protect the Chinese states and empires against the raids and invasions of the various nomadic groups of the Eurasian Steppe. Several walls were being built as early as the 7th century BC;[2] these, later joined together and made bigger and stronger, are collectively referred to as the Great Wall.[3] Especially famous is the wall built in 220–206 BC by Qin Shi Huang, the first Emperor of China. Little of that wall remains. The Great Wall has been rebuilt, maintained, and enhanced over various dynasties; the majority of the existing wall is from the Ming Dynasty (1368–1644).</string>
    <string name="T2">Sites in Australia</string>
    <string name="T22">Great Barrier Reef</string>
    <string name="DESC3">The Great Barrier Reef, off the coast of Queensland in northeastern Australia, is the largest living thing on Earth, and even visible from outer space. The 2,300km-long ecosystem comprises thousands of reefs and hundreds of islands made of over 600 types of hard and soft coral. It\'s home to countless species of colourful fish, molluscs and starfish, plus turtles, dolphins and sharks.</string>
    <string name="TE">The Twelve Apostles</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps98">Map</string>
    <string name="Q1">1. which of the following ruled a long reign using the monarchy system?</string>
    <string name="op1">Haileselassie</string>
    <string name="op2">EPRDF</string>
    <string name="OP3">Obama</string>
    <string name="Q2">2. What is the name of the socialists who took over in 70s</string>
    <string name="op4">The Derg</string>
    <string name="op5">The emperialists</string>
    <string name="op6">The humanists</string>
    <string name="Q3">3. Which of the following has the highest seats in Parlament?</string>
    <string name="op7">Democrats</string>
    <string name="op8">Republicans</string>
    <string name="op9">Librals</string>
    <string name="Q4">4. How many seats does the ethiopian parlament pertain?</string>
    <string name="OP10">300</string>
    <string name="OP12">547</string>
    <string name="op15">200</string>
    <string name="Q5">5. How many parts is parlament divided to ?</string>
    <string name="OP16">4</string>
    <string name="OP17">1</string>
    <string name="OP19">2</string>
    <string name="GQ1">1. What are the Countries that boarder Ehiopia?</string>
    <string name="GOP1">Somalia,Sudan and Tanzania</string>
    <string name="GOP2">Somalia,Sudan and kenya</string>
    <string name="GOP3">France,China and America</string>
    <string name="GQ2">2.Where is Ethiopia located?</string>
    <string name="Gop6">West Africa</string>
    <string name="GOP7">East AFRICA</string>
    <string name="Desc6">Melat Tekie, Computer Science Major and Psychology Minor. I am a senior in MSUM graduating on may 2018. My Hobies include reading Poetry and drawing </string>
    <string name="north_africa">North Africa</string>
    <string name="_3_what_kind_of_climate_does_ethiopia_have">3. What kind of Climate does Ethiopia have?</string>
    <string name="cold">Cold</string>
    <string name="warm_and_moist">Warm and Moist</string>
    <string name="hot">Hot</string>
    <string name="_4_what_is_the_highest_point_in_ethiopia">4. What is the Highest point in Ethiopia?</string>
    <string name="mount_everest">Mount Everest</string>
    <string name="ras_dashen">Ras Dashen</string>
    <string name="cape_city">Cape city</string>
    <string name="_5_what_county_is_south_of_ethiopia">5. What County is South of Ethiopia?</string>
    <string name="sudan">Sudan</string>
    <string name="asd">Kenya</string>
    <string name="fadfs">Nigeria</string>
    <string name="asfadsf">1. How was Ethiopia formerly known?</string>
    <string name="dsagasdfghde">Persia</string>
    <string name="adsfs">Abyssinia</string>
    <string name="zCXc">Mesopotamia</string>
    <string name="BZXbmn">2. Who colonized Ethiopia in 1930-1974?</string>
    <string name="xcszxvc">France</string>
    <string name="xzcxvxcv">Italy</string>
    <string name="ZCzxvxfdg">Portugal</string>
    <string name="bcascb">3. Which of the following was first discovered in Ethiopia?</string>
    <string name="cmm">Cotton</string>
    <string name="eeee">Coffee</string>
    <string name="ddfhgbdf">flower</string>
    <string name="masdasd">4. What dynasty ruled Ethiopia in the 8o\'s?</string>
    <string name="ascsdbgtnr">menelik</string>
</resources>
